Fix gear spacing

--- a/css/style.css
+++ b/css/style.css
@@ -172,18 +172,18 @@ i {
 		font-family: "Tw Cen MT Bold";
 		font-weight: 400;
 		letter-spacing: -1.6rem;
-		letter-spacing: -3vw;
+		letter-spacing: -2vw;
 	}
 	.title>span:last-of-type{
 		font-weight: 200;
 		font-family: "Tw Cen MT";
-		padding-left: 2vw;
+		padding-left: 1vw;
 	}
 	.title i{
 		position: relative;
 		top: 0.1em;
 		letter-spacing: -1.6rem;
-		letter-spacing: -3vw;
+		letter-spacing: -2vw;
 	}
 	.hline {
 		display: block;
@@ -453,6 +453,14 @@ i {
 	@media screen and (max-width: 900px) {
 		.title{
 			font-size:30vw;
+		}
+		.title>span:first-of-type{
+			letter-spacing: -1.6rem;
+			letter-spacing: -3vw;
+		}
+		.title i{
+			letter-spacing: -1.6rem;
+			letter-spacing: -3vw;
 		}
 		.aboutcontainer>div {
 			flex-basis: 100%;
